Disable google ad

--- a/skin.html
+++ b/skin.html
@@ -25,7 +25,11 @@
 			<div id="content">
 				<!-- ad_responsible -->
 				<!-- <div style="text-align:center; margin:1em auto">
-					<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-9843810906985249" data-ad-slot="1288245819" data-ad-format="auto"></ins>
+					<ins class="adsbygoogle"
+					     style="display:block"
+					     data-ad-client="ca-pub-9843810906985249"
+					     data-ad-slot="8847860612"
+					     data-ad-format="auto"></ins>
 				</div> -->
 				<s_list>
 				<div id="searchList" class="nonEntry">
@@ -540,9 +544,10 @@
 				<div id="btnRSS">
 					<a href="[##_rss_url_##]" onclick="window.open(this.href); return false"><img src="./images/btn_rss.gif" alt="rss"/></a>
 				</div>
-				<div style="text-align:center; margin:1em auto">
+				<!-- Sidebar 광고 -->
+				<!-- <div style="text-align:center; margin:1em auto">
 					<ins class="adsbygoogle" style="display:inline-block;width:300px;height:600px" data-ad-client="ca-pub-9843810906985249" data-ad-slot="4939716216"></ins>
-				</div>
+				</div> -->
 				</s_sidebar_element>
 				</s_sidebar>
 				
