--- a/Lists.html
+++ b/Lists.html
@@ -386,7 +386,7 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning - Deep Learning)</a>, 2014-04-28</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Hash-Table-and-Hash-function">Hash Table and Hash function</a>, 2014-02-10</li>
-<li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL (Structured Query Language) 을 배워보자</a>, 2014-03-06</li>
+<li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL (Structured Query Language) 을 배워보자. :: MySQL, JDBC (Java DataBase Connector)</a>, 2014-03-06</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B8%80-%EC%B4%88%EC%84%B1%EA%B2%80%EC%83%89-in-Javascript">한글 초성검색 in Javascript</a>, 2015-05-14</li>
 </ul>
 
