--- a/Lists.html
+++ b/Lists.html
@@ -128,6 +128,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ## PH
 
 <ul>
+	<li>2017-06-27 : 정리.</li>
 	<li>2015-12-23 : 새로 올린 글들도 정리를 해야 하는데...</li>
 	<li>2015-12-19 : 정리정리.</li>
 	<li>2015-12-01 : Fuzzy search update. Match Score 적용.</li>
@@ -139,15 +140,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-interest] Recent interests
 
 <ul>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%84%B8%EC%9B%94%ED%98%B8-%EC%B9%A8%EB%AA%B0%EC%82%AC%EA%B3%A0">세월호 침몰사고. 다이빙벨 논란. 링크 모음.</a>, 2014-04-22; 사고는 2014년 4월 16일 8시 48분 경 대한민국 전라남도 진도군 조도면 부근 황해 상에서 발생.</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning - Deep Learning)</a>, 2014-04-28</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Career-Portfolio-%EC%9D%B4%EA%B0%95%EC%88%98">Career Portfolio - 이강수</a>, 2015-12-18</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/2015-%EB%B0%95%EA%B7%BC%ED%98%9C-%EB%8C%80%ED%86%B5%EB%A0%B9-%EC%8B%A0%EB%85%84-%EA%B8%B0%EC%9E%90%ED%9A%8C%EA%B2%AC-%EC%98%81%EC%83%81">2015 박근혜 대통령 신년 기자회견 영상</a>, 2015-01-12</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8%E6%96%87%E5%9C%A8%E5%AF%85-vs-%EB%B0%95%EA%B7%BC%ED%98%9C%E6%9C%B4%E6%A7%BF%E6%83%A0-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">문재인(文在寅) vs 박근혜(朴槿惠) 프로필 비교</a>, 2014-03-17</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B3%B8%EC%9D%B8-%EC%B1%85%EC%9D%84-%ED%86%B5%ED%95%B4-%EB%B0%94%EB%9D%BC%EB%B3%B8-37%EC%84%B8%EC%9D%98-%EB%B0%95%EA%B7%BC%ED%98%9C">본인 책을 통해 바라본 37세의 박근혜</a>, 2014-12-16</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/NIS-cheating">2012~2013 대한민국 국가정보원 (국정원, NIS) 여론 조작 사건</a>, 2014-02-11</li>
-<li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Entropy">엔트로피(Entropy) 개념에 대한 이해</a>, 2014-01-24</li>
 </ul>
 
@@ -156,6 +150,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A4%91%EB%A0%A5%ED%95%98%EC%9D%98-%EB%91%90-%EC%A0%90-%EC%82%AC%EC%9D%B4%EB%A5%BC-%EA%B0%80%EC%9E%A5-%EB%B9%A8%EB%A6%AC-%EC%9D%B4%EB%8F%99%ED%95%98%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%8B%B8%EC%9D%B4%ED%81%B4%EB%A1%9C%EC%9D%B4%EB%93%9C">중력하의 두 점 사이를 가장 빨리 이동하는 방법 (싸이클로이드)</a>, 2017-02-01</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/SturmLiouville-and-Completeness-Theory">Sturm-Liouville and Completeness Theory</a>, 2015-12-12</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Two-track-stragedy-%EC%96%91-%EB%B0%A9%ED%96%A5-%EC%A0%84%EB%9E%B5">Two track stragedy (양 방향 전략)</a> Many track stragedy 로도 확장이 가능할듯?, 2015-12-24</li>
@@ -223,6 +218,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 
 <ul>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Method-of-Lagrange-multipliers">Method of Lagrange multipliers (English)</a>, 2014-03-21; and <a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Optimization-with-the-Method-of-Lagrange-multipliers">최적화, 라그랑지 승수법 (Optimization with the Method of Lagrange multipliers)</a>, 2014-03-18; 앞쪽의 영어버전이 더 자세히 작성되어 있음.</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A4%91%EB%A0%A5%ED%95%98%EC%9D%98-%EB%91%90-%EC%A0%90-%EC%82%AC%EC%9D%B4%EB%A5%BC-%EA%B0%80%EC%9E%A5-%EB%B9%A8%EB%A6%AC-%EC%9D%B4%EB%8F%99%ED%95%98%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%8B%B8%EC%9D%B4%ED%81%B4%EB%A1%9C%EC%9D%B4%EB%93%9C">중력하의 두 점 사이를 가장 빨리 이동하는 방법 (싸이클로이드)</a>, 2017-02-01</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/SturmLiouville-and-Completeness-Theory">Sturm-Liouville and Completeness Theory</a>, 2015-12-12</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Dirac-delta-function">디락 델타 함수 (Dirac delta function)</a>, 2014-02-13</li>
@@ -276,7 +272,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ### 지구과학
 
 <ul>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC-%EA%B8%B0%ED%9B%84%EC%A0%95%EB%B3%B4-%EA%B8%B0%EC%98%A8-%EB%B0%94%EB%9E%8C-%ED%95%B4%EB%A5%98-%EA%B4%80%EB%A0%A8">지구 기후정보 (기온, 바람, 해류) 관련</a>, 2015-07-13</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC-%EA%B8%B0%ED%9B%84%EC%A0%95%EB%B3%B4-%EA%B8%B0%EC%98%A8-%EB%B0%94%EB%9E%8C-%ED%95%B4%EB%A5%98-%EA%B4%80%EB%A0%A8">지구 기후정보 (기온, 바람, 해류) 관련 - 바람/온도 지도</a>, 2015-07-13</li>
 </ul>
 
 
@@ -360,7 +356,7 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Vertical-center-align-by-CSS-in-HTML">Vertical center align by CSS in HTML</a>, 2015-02-05</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/CSS3-examples">CSS3 examples</a>, 2014-04-25</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Responsible-web-design-with-css-media-query">반응형 웹 만들기 (Responsible web design with css media query)</a>, 2014-03-06</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Responsible-web-design-with-css-media-query">반응형 웹 만들기 (Responsible/Scalable web design with css media query)</a>, 2014-03-06</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Improving-web-performance">Improving web performance</a>, 2014-02-10</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Interactive-graph-and-chart-in-HTML">Interactive graph and chart in HTML</a>, 2014-03-03</li>
 </ul>
