--- a/Lists.html
+++ b/Lists.html
@@ -150,6 +150,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Compiling-and-Running-JAVA-Build-System-through-batch-bat-and-shell-script-sh">Compiling and Running JAVA (Build System) through batch (.bat) and shell script (.sh)</a>, 2017-08-06</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A4%91%EB%A0%A5%ED%95%98%EC%9D%98-%EB%91%90-%EC%A0%90-%EC%82%AC%EC%9D%B4%EB%A5%BC-%EA%B0%80%EC%9E%A5-%EB%B9%A8%EB%A6%AC-%EC%9D%B4%EB%8F%99%ED%95%98%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%8B%B8%EC%9D%B4%ED%81%B4%EB%A1%9C%EC%9D%B4%EB%93%9C">중력하의 두 점 사이를 가장 빨리 이동하는 방법 (싸이클로이드)</a>, 2017-02-01</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/SturmLiouville-and-Completeness-Theory">Sturm-Liouville and Completeness Theory</a>, 2015-12-12</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%A0%95%EC%8B%A0%EB%B6%84%EC%97%B4%EB%B3%91-%EC%A1%B0%ED%98%84%EB%B3%91-%EC%9D%B4%EB%9E%80">정신분열병 (조현병) 이란?</a>, 2016-02-11</li>
@@ -322,7 +323,10 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 #### JAVA and JavaScript
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Compiling-and-Running-JAVA-Build-System-through-batch-bat-and-shell-script-sh">Compiling and Running JAVA (Build System) through batch (.bat) and shell script (.sh)</a>, 2017-08-06</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/JAVA-SE-8-API-index-with-Fuzzy-Search">JAVA SE 8 - API - index with Fuzzy Search</a>, 2015-12-15</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript-and-java">Regular Expression (정규 표현식), and match/replace method in JavaScript and JAVA</a>, 2014-05-03</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Encode-Unescape-and-Decode-Escape-URI-Component">Encode/Unescape and Decode/Escape URI Component</a>, 2015-01-04</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
@@ -376,8 +380,6 @@ window.history replaceState() and pushState()</li>
 ###[#sec-IT-Algorithm-Database] Algorithm and Database
 
 <ul>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning - Deep Learning)</a>, 2014-04-28</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
