--- a/Lists.html
+++ b/Lists.html
@@ -1,12 +1,17 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<!DOCTYPE html>
+
+<meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, user-scalable=yes"/>
 
 <codeprint id="docuK-style">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 <div class="docuK rendered"><div class="sec" id="docuK-log"></div></div>
 <!-- From kipid.tistory CDN -->
-<link rel="stylesheet" media="all" type="text/css" href="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-2.2.css">
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.2.js" charset="utf-8"></script>
+<link rel="stylesheet" href="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-2.3.css">
+<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.3.js" charset="utf-8"></script>
 </codeprint><!-- docuK-style -->
 
 <style>
@@ -74,7 +79,6 @@
 }
 </style>
 
-<meta name="description" content="List of posts in kipid's blog" />
 <codeprint class="SEE">
 # Lists
 
@@ -541,18 +545,18 @@ kipid.delayPad=0;
 </script>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
-	skipStartupTypeset: true, // Skip startup typeset.
-	positionToHash: false, // No repositioning to #something anchor.
-	tex2jax: {
-		inlineMath: [['$','$'], ['\\(','\\)']], // Using $ for inline math.
-		displayMath: [['$$','$$'], ['\\[','\\]']], // Using $$ for outline math.
-		processEscapes: true, // Escape \$
-		processEnvironments: false, // Ignore \begin{something} ... \end{something}
-	}
+  skipStartupTypeset: true, // Skip startup typeset.
+  positionToHash: false, // No repositioning to #something anchor.
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']], // Using $ for inline math.
+    displayMath: [['$$','$$'], ['\\[','\\]']], // Using $$ for outline math.
+    processEscapes: true, // Escape \$
+    processEnvironments: false, // Ignore \begin{something} ... \end{something}
+  }
 });
 </script>
 <!-- From kipid.tistory CDN -->
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.2.js" charset="utf-8"></script>
+<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.3.js" charset="utf-8"></script>
 </codeprint><!-- docuK-script -->
 
 <script>
