--- a/slabs/Interactive graph and chart in HTML.html
+++ b/slabs/Interactive graph and chart in HTML.html
@@ -10,8 +10,8 @@
 	crossorigin="anonymous"></script>
 <div class="docuK rendered"><div class="sec" id="docuK-log"></div></div>
 <!-- From kipid.tistory CDN -->
-<link rel="stylesheet" href="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-2.3.css">
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.3.js" charset="utf-8"></script>
+<link rel="stylesheet" href="https://tistory1.daumcdn.net/tistory/1468360/skin/images/docuK-2.3.css">
+<script src="https://tistory3.daumcdn.net/tistory/1468360/skin/images/docuK-prepare-2.3.js" charset="utf-8"></script>
 </codeprint><!-- docuK-style -->
 
 <codeprint id="docuK-docu">
@@ -51,8 +51,8 @@
 <!-- jQuery (js) must be included at first. Because I added it already in the beginning of this document, I annotated it here. -->
 <!-- <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script> -->
 
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
 
 <script>
 $(document).ready(function(){
@@ -95,7 +95,7 @@ $(document).ready(function(){
 	/* Dark theme for Highcharts JS @author Torstein Honsi */
 	// Load the fonts
 	Highcharts.createElement('link', {
-			href: 'http://fonts.googleapis.com/css?family=Unica+One', rel: 'stylesheet', type: 'text/css'
+			href: 'https://fonts.googleapis.com/css?family=Unica+One', rel: 'stylesheet', type: 'text/css'
 		}, null, document.getElementsByTagName('head')[0]);
 
 	Highcharts.theme = {
@@ -215,19 +215,19 @@ $(document).ready(function(){
 </div>
 
 <!-- Duplicate JavaScripts (js) are removed. -->
-<!-- <script src="http://code.highcharts.com/highcharts.js"></script> -->
-<script src="http://code.highcharts.com/modules/data.js"></script>
-<!-- <script src="http://code.highcharts.com/modules/exporting.js"></script> -->
+<!-- <script src="https://code.highcharts.com/highcharts.js"></script> -->
+<script src="https://code.highcharts.com/modules/data.js"></script>
+<!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
 
 <!-- Additional files for the Highslide popup effect -->
-<!-- <script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide-full.min.js"></script> -->
-<!-- <script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide.config.js" charset="utf-8"></script> -->
-<link rel="stylesheet" type="text/css" href="http://www.highcharts.com/media/com_demo/highslide.css">
+<!-- <script type="text/javascript" src="https://www.highcharts.com/media/com_demo/highslide-full.min.js"></script> -->
+<!-- <script type="text/javascript" src="https://www.highcharts.com/media/com_demo/highslide.config.js" charset="utf-8"></script> -->
+<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/highslide.css">
 
 <script>
 $(document).ready(function(){
 	// Get the CSV and create the chart
-	$.getJSON('http://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
+	$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
 		// '<div id="chart-ajax"></div>' is placed in the document.
 		$('#chart-ajax').highcharts({
 			data: {csv: csv,
@@ -418,11 +418,11 @@ $(document).ready(function(){
 	<pre id="pre-code-chart-map" class="prettyprint linenums lang-html scrollable"></pre>
 </div>
 
-<!-- <script src="http://code.highcharts.com/maps/highmaps.js"></script> -->
+<!-- <script src="https://code.highcharts.com/maps/highmaps.js"></script> -->
 <!-- See : https://www.highcharts.com/docs/maps/getting-started
 If you already have Highcharts installed in the web page and want to run Highmaps as a plugin, include "maps/modules/map.js" script tag after "highcharts.js". -->
-<script src="http://code.highcharts.com/maps/modules/map.js"></script>
-<script src="http://code.highcharts.com/maps/modules/data.js"></script>
+<script src="https://code.highcharts.com/maps/modules/map.js"></script>
+<script src="https://code.highcharts.com/maps/modules/data.js"></script>
 <script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
 
 <script>
@@ -657,5 +657,5 @@ MathJax.Hub.Config({
 });
 </script>
 <!-- From kipid.tistory CDN -->
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.3.js" charset="utf-8"></script>
+<script src="https://tistory3.daumcdn.net/tistory/1468360/skin/images/docuK-postProcess-2.3.js" charset="utf-8"></script>
 </codeprint><!-- docuK-script -->
