--- a/skin.html
+++ b/skin.html
@@ -6,6 +6,13 @@
 <title>[##_page_title_##]</title>
 <link rel="stylesheet" href="./style.css">
 <script src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9843810906985249",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body id="[##_body_id_##]" class="<s_if_var_layout-type>[##_var_layout-type_##] </s_if_var_layout-type><s_if_var_color-type>[##_var_color-type_##]</s_if_var_color-type><s_if_var_post-type> [##_var_post-type_##]</s_if_var_post-type><s_if_var_view-more> paging-view-more</s_if_var_view-more>">
 <s_t3>
