--- a/Lists.html
+++ b/Lists.html
@@ -154,6 +154,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a target="_blank" href="https://kipid.tistory.com/entry/%EC%A0%84%EA%B8%B0%EC%99%80-%EC%9E%90%EA%B8%B0">전기와 자기 (Electrocity and Magnetism)</a>, 2021-03-22</li>
+<li><a target="_blank" href="https://kipid.tistory.com/entry/%EA%B5%AC%ED%95%98%EB%9D%BC%EC%9D%98-On-and-Off-%EC%98%A8%EC%95%A4%EC%98%A4%ED%94%84-%EC%A0%84%ED%8E%B8">구하라의 On and Off (온앤오프) 전편</a>, 2021-03-19</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%EB%B0%95%EC%98%81%EC%84%A0-vs-%EC%98%A4%EC%84%B8%ED%9B%88-vs-%EC%95%88%EC%B2%A0%EC%88%98-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박영선(朴映宣) vs 오세훈(吳世勳) vs 안철수(安哲秀) 프로필 비교</a>, 2021-03-16</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Netflix-iframe-%EC%9C%BC%EB%A1%9C-%ED%8D%BC%EC%98%A4%EA%B8%B0">Netflix iframe 으로 퍼오기</a>, 2021-03-13</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%EC%A3%BC%ED%83%9D-%EC%9E%84%EB%8C%80%EC%B0%A8-%ED%91%9C%EC%A4%80%EA%B3%84%EC%95%BD%EC%84%9C-%EC%A0%84%EC%9B%94%EC%84%B8-%EA%B3%84%EC%95%BD%EC%84%9C-%EC%83%81%EA%B0%80-%EA%B1%B4%EB%AC%BC-%EC%9E%84%EB%8C%80%EC%B0%A8-%ED%91%9C%EC%A4%80%EA%B3%84%EC%95%BD%EC%84%9C">주택 임대차 표준계약서 (전월세 계약서), 상가 건물 임대차 표준계약서</a>, 2018-01-17</li>
@@ -525,6 +527,7 @@ window.history replaceState() and pushState()</li>
 ### Etc.
 
 <ul>
+<li><a target="_blank" href="https://kipid.tistory.com/entry/%EA%B5%AC%ED%95%98%EB%9D%BC%EC%9D%98-On-and-Off-%EC%98%A8%EC%95%A4%EC%98%A4%ED%94%84-%EC%A0%84%ED%8E%B8">구하라의 On and Off (온앤오프) 전편</a>, 2021-03-19</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%EB%B0%94%EB%82%98%EB%82%98-%ED%81%AC%EB%A0%88%EC%9D%B4%EC%A7%80-Popup-Store-with-%ED%95%98%EB%9D%BC%EA%B5%AC">바나나 크레이지 :: Pop-up Store (with 하라구)</a>, 2015-12-19</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%EC%9D%8C%EC%8B%9D%EC%A0%90-%ED%95%A0%EC%9D%B8%EC%A0%95%EB%B3%B4-%EC%A0%95%EB%A6%AC">음식점 할인정보 정리. (App Surprise)</a>, 2015-05-13</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/KBS2-A-Style-For-You-%EC%96%B4-%EC%8A%A4%ED%83%80%EC%9D%BC-%ED%8F%AC-%EC%9C%A0">KBS2 - A Style For You (어 스타일 포 유)</a>, 2015-06-23</li>
