--- a/Lists.html
+++ b/Lists.html
@@ -186,6 +186,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Recoeve-progress">Recoeve progress</a></li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Recoeve-net-Feedbacks-Error-reports-and-Suggestions">Recoeve.net : Feedbacks, Error reports, and Suggestions</a>, 2015-04-29</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Recoeve-01">Recoeve Database setup (0.1 version)</a></li>
+<li><a target="_blank" href="https://kipid.tistory.com/entry/Recoeve-setting">Recoeve setting</a></li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Personalized-recommendation-system">개인화 된 추천 시스템 (Personalized recommendation system)</a></li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/iframe-test-of-Recoevenet">iframe test of Recoeve.net</a>, 2015-05-11</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/URI-rendering-test">URI rendering test</a>, 2015-07-10</li>
@@ -379,6 +380,7 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%EC%9D%B8%EC%8A%A4%ED%83%80%EA%B7%B8%EB%9E%A8-Instagram-%ED%8D%BC%EC%98%A4%EA%B8%B0">인스타그램 (Instagram) 퍼오는 법</a>, 2015-06-28</li>
+<li><a target="_blank" href="https://kipid.tistory.com/entry/%EC%A7%80%EB%8F%84-%ED%8D%BC%EC%98%A4%EA%B8%B0-%EB%8B%A4%EC%9D%8C-%EC%B9%B4%EC%B9%B4%EC%98%A4-%EB%84%A4%EC%9D%B4%EB%B2%84-%EA%B5%AC%EA%B8%80">지도 퍼오기 (다음 카카오, 네이버, 구글)</a>, 2019-08-15</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/%ED%8E%98%EC%9D%B4%EC%8A%A4%EB%B6%81-%ED%8D%BC%EC%98%A4%EA%B8%B0-Embeding-facebook-post">페이스북 포스트 퍼오기 (Embeding facebook post)</a>, 2015-07-01</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
 <li><a target="_blank" href="https://kipid.tistory.com/entry/Font-test">여러가지 글꼴 테스트 (Font test)</a>, 2014-01-20</li>
